--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
+    "consign": "^0.1.6",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
