created user register route into api

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -86,7 +86,7 @@
 		],
 		"function-paren-newline": "error",
 		"generator-star-spacing": "error",
-		"global-require": "error",
+		"global-require": 0,
 		"grouped-accessor-pairs": "error",
 		"guard-for-in": "error",
 		"handle-callback-err": "error",
@@ -122,7 +122,7 @@
 		"max-depth": "error",
 		"max-len": "error",
 		"max-lines": "error",
-		"max-lines-per-function": "error",
+		"max-lines-per-function": 0,
 		"max-nested-callbacks": "error",
 		"max-params": "error",
 		"max-statements": "error",
@@ -171,9 +171,9 @@
 		"no-lonely-if": "error",
 		"no-loop-func": "error",
 		"no-loss-of-precision": "error",
-		"no-magic-numbers": "error",
+		"no-magic-numbers": 0,
 		"no-mixed-operators": "error",
-		"no-mixed-requires": "error",
+		"no-mixed-requires": 0,
 		"no-multi-assign": "error",
 		"no-multi-spaces": "error",
 		"no-multi-str": "error",
@@ -192,7 +192,7 @@
 		"no-param-reassign": "error",
 		"no-path-concat": "error",
 		"no-plusplus": "error",
-		"no-process-env": "error",
+		"no-process-env": 0,
 		"no-process-exit": "error",
 		"no-promise-executor-return": "error",
 		"no-proto": "error",
@@ -210,7 +210,7 @@
 		"no-shadow": "error",
 		"no-spaced-func": "error",
 		"no-sync": "error",
-		"no-tabs": "error",
+		"no-tabs": 0,
 		"no-template-curly-in-string": "error",
 		"no-ternary": "error",
 		"no-throw-literal": "error",
@@ -242,7 +242,7 @@
 		],
 		"object-property-newline": "error",
 		"object-shorthand": "error",
-		"one-var": "error",
+		"one-var": 0,
 		"one-var-declaration-per-line": "error",
 		"operator-assignment": "error",
 		"operator-linebreak": "error",
@@ -278,7 +278,7 @@
 			"error",
 			"last"
 		],
-		"sort-keys": "error",
+		"sort-keys": 0,
 		"sort-vars": "error",
 		"space-before-blocks": "error",
 		"space-before-function-paren": "off",
