--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix --ext .js,.jsx ."
+    "lint:fix": "eslint --fix --ext .js,.jsx .",
+    "pretty": "prettier --write --tab-width 2 --use-tabs --arrow-parens avoid --single-quote --quote-props preserve --trailing-comma none ."
   },
   "repository": {
     "type": "git",
@@ -20,11 +21,13 @@
   "devDependencies": {
     "eslint": "^7.14.0",
     "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.0"
+    "husky": "^4.3.0",
+    "prettier": "^2.2.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run pretty"
     }
   },
   "dependencies": {
