--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint --fix --ext .js,.jsx .",
-    "pretty": "prettier --write --tab-width 2 --use-tabs --arrow-parens avoid --single-quote --quote-props preserve --trailing-comma none ."
+    "pretty": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run pretty"
+      "pre-commit": "npm run pretty && npm run lint"
     }
   },
   "dependencies": {
