--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,7 +11,9 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongodb": "^3.6.3",
-		"mongoose": "^5.10.15"
+		"mongoose": "^5.10.15",
+		"nodemailer": "^6.4.16",
+		"nodemailer-express-handlebars": "^4.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.6"
