--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,9 +4,11 @@
 	"description": "",
 	"main": "index.js",
 	"dependencies": {
+		"axios": "^0.21.0",
 		"body-parser": "^1.19.0",
 		"config": "^3.3.2",
 		"consign": "^0.1.6",
+		"cors": "^2.8.5",
 		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
