--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"dependencies": {
+		"axios": "^0.21.0",
 		"body-parser": "^1.19.0",
 		"config": "^3.3.2",
 		"consign": "^0.1.6",
