fixed eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -103,12 +103,12 @@
 		"lines-between-class-members": "error",
 		"max-classes-per-file": "error",
 		"max-depth": "error",
-		"max-len": "error",
+		"max-len": 0,
 		"max-lines": "error",
 		"max-lines-per-function": 0,
 		"max-nested-callbacks": "error",
 		"max-params": "error",
-		"max-statements": "error",
+		"max-statements": 0,
 		"max-statements-per-line": "error",
 		"multiline-comment-style": ["error", "separate-lines"],
 		"multiline-ternary": "error",
@@ -217,7 +217,7 @@
 		"nonblock-statement-body-position": "error",
 		"object-curly-newline": "error",
 		"object-curly-spacing": ["error", "always"],
-		"object-property-newline": "error",
+		"object-property-newline": 0,
 		"object-shorthand": "error",
 		"one-var": 0,
 		"one-var-declaration-per-line": "error",
