fixed eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -115,7 +115,7 @@
 		"new-cap": "error",
 		"new-parens": "error",
 		"newline-after-var": "off",
-		"newline-before-return": "error",
+		"newline-before-return": 0,
 		"newline-per-chained-call": "error",
 		"no-alert": "error",
 		"no-array-constructor": "error",
@@ -197,7 +197,7 @@
 		"no-trailing-spaces": "error",
 		"no-undef-init": "error",
 		"no-undefined": "error",
-		"no-underscore-dangle": "error",
+		"no-underscore-dangle": 0,
 		"no-unmodified-loop-condition": "error",
 		"no-unneeded-ternary": "error",
 		"no-unreachable-loop": "error",
@@ -238,7 +238,7 @@
 		"prefer-rest-params": "error",
 		"prefer-spread": "error",
 		"prefer-template": "error",
-		"quote-props": "error",
+		"quote-props": 0,
 		"quotes": ["error", "single"],
 		"radix": "error",
 		"require-atomic-updates": "error",
