--- a/apps/themovie/package.json
+++ b/apps/themovie/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/user-event": "^12.2.2",
 		"axios": "^0.21.0",
 		"history": "^5.0.0",
+		"moment": "^2.29.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router": "^6.0.0-beta.0",
